--- a/VidCoder/Controls/PathTextBlock.xaml
+++ b/VidCoder/Controls/PathTextBlock.xaml
@@ -5,5 +5,5 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 mc:Ignorable="d" 
 			 d:DesignHeight="30" d:DesignWidth="300">
-	<TextBlock Name="textBlock" />
+	<TextBlock Name="textBlock" ToolTipService.InitialShowDelay="0" />
 </UserControl>
