Added status messages. Added messages for a few events (encode start/stop, playing a preview clip, update available, update download finished).

--- a/VidCoder/View/FileConflictDialog.xaml
+++ b/VidCoder/View/FileConflictDialog.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="VidCoder.View.FileConflictDialog"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		Background="WhiteSmoke"
 		Title="File conflict" Height="186" Width="377" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
 	<Grid>
 		<TextBlock
