--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -29,7 +29,6 @@
 		<converters:ChapterVMConverter x:Key="ChapterVMConverter" />
 		<local:EnumDisplayer Type="{x:Type Encoding:VideoEncoder}" x:Key="VideoEncoderChoices" />
 		<local:EnumDisplayer Type="{x:Type Model:VideoRangeType}" x:Key="VideoRangeTypeChoices" />
-		<local:EnumDisplayer Type="{x:Type localmodel:EncodeCompleteAction}" x:Key="EncodeCompleteActionChoices" />
 		<Color x:Key="SectionBackgroundTopColor">#F5F5F5</Color>
 		<Color x:Key="SectionBackgroundBottomColor">#EAEAEA</Color>
 		<LinearGradientBrush x:Key="SectionBackground" StartPoint="0,0" EndPoint="0,1">
@@ -1178,8 +1177,9 @@
 
 				<ComboBox
 					HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,3,0"
-					ItemsSource="{Binding DisplayNames, Source={StaticResource EncodeCompleteActionChoices}}"
-					SelectedValue="{Binding ProcessingVM.EncodeCompleteAction, Converter={StaticResource EncodeCompleteActionChoices}}" />
+					ItemsSource="{Binding ProcessingVM.EncodeCompleteActions}"
+					SelectedValue="{Binding ProcessingVM.EncodeCompleteAction}"
+					DisplayMemberPath="Display"/>
 			</StackPanel>
 
 			
