Updated version numbers and HandBrake to svn 4445.

--- a/VidCoder/View/AboutDialog.xaml
+++ b/VidCoder/View/AboutDialog.xaml
@@ -14,8 +14,8 @@
 			<TextBlock HorizontalAlignment="Left" Name="versionLabel" Text="Version" VerticalAlignment="Top"  />
 			<TextBlock Text="{Binding Version}" Margin="5,0,0,0" Name="versionText" />
 		</StackPanel>
-		<TextBlock Height="23" HorizontalAlignment="Left" Margin="171,79,0,0" Name="textBlock3" Text="Based on HandBrake (svn 4368)" VerticalAlignment="Top" />
-		<TextBlock Height="23" HorizontalAlignment="Left" Margin="171,108,0,0" Name="textBlock2" Text="© 2010 VidCoder Developers" VerticalAlignment="Top" />
+		<TextBlock Height="23" HorizontalAlignment="Left" Margin="171,79,0,0" Name="textBlock3" Text="Based on HandBrake (svn 4445)" VerticalAlignment="Top" />
+		<TextBlock Height="23" HorizontalAlignment="Left" Margin="171,108,0,0" Name="textBlock2" Text="© 2010-2012 VidCoder Developers" VerticalAlignment="Top" />
 		<Label Content="License:" Height="28" HorizontalAlignment="Left" Margin="12,138,0,0" Name="label1" VerticalAlignment="Top" />
 
 		<TextBlock
