Changing number box to only select all after the initial focusing click and if the mouseup comes soon enough after the mousedown.

--- a/VidCoder/Controls/NumberBox.xaml
+++ b/VidCoder/Controls/NumberBox.xaml
@@ -138,6 +138,7 @@
 			LostFocus="NumberBoxLostFocus"
 			PreviewTextInput="NumberBoxPreviewTextInput"
 			PreviewKeyDown="NumberBoxPreviewKeyDown"
+            PreviewMouseDown="NumberBoxPreviewMouseDown"
 			PreviewMouseUp="NumberBoxPreviewMouseUp"
 			TextChanged="NumberBoxTextChanged" />
 		<Grid
